add functionality to delete notes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                     <button class="btn" onclick="archiveAll()">
                                         <i class="fa-solid fa-xl fa-box-archive""></i>
                                     </button>
-                                <button class="btn" onclick="deleteAll()">
+                                <button class="btn delete-all-button">
                                     <i class="fa-solid fa-xl white fa-trash""></i>
                                 </button></th>
                             </tr>
