add functionality to update notes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <form>
+                        <form id="noteForm">
                             <div class="mb-3">
                                 <label for="note-name" class="col-form-label">Name:</label>
                                 <input type="text" class="form-control" id="note-name">
